--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "nodemailer": "^6.9.13",
     "react": "^18",
     "react-dom": "^18",
+    "react-hot-toast": "^2.4.1",
     "react-type-animation": "^3.2.0",
     "resend": "^3.2.0"
   },
