--- a/package.json
+++ b/package.json
@@ -11,17 +11,17 @@
   "dependencies": {
     "@heroicons/react": "^2.1.3",
     "framer-motion": "^11.1.9",
-    "next": "14.1.4",
+    "next": "^15.0.3",
     "nodemailer": "^6.9.13",
-    "react": "^18",
-    "react-dom": "^18",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-hot-toast": "^2.4.1",
     "react-type-animation": "^3.2.0",
     "resend": "^3.2.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
-    "eslint-config-next": "14.1.4",
+    "eslint-config-next": "^15.0.3",
     "postcss": "^8.4.27",
     "tailwindcss": "^3.3.3"
   }
